@@ -19,6 +19,7 @@
 
  - `Chunky.Fractions`
   - added `uniq/2` for finding distinct fractions in a list
+  - added `sort/2` for sorting value lists
   
 ## v0.6.4
 
